{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 10,
  "lineage": "e2b58bf5-7012-b622-9e51-cbec97b64bb5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082ff0f07380cd1e9",
            "arn": "arn:aws:ec2:ap-southeast-5:520396380462:instance/i-00ab791dd92c7ea58",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-5a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ab791dd92c7ea58",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hafiz-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4897fa0cd01d30d",
            "private_dns": "ip-10-131-1-85.ap-southeast-5.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.131.1.85",
            "public_dns": "ec2-43-216-214-182.ap-southeast-5.compute.amazonaws.com",
            "public_ip": "43.216.214.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1a0be7b8aee5d81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031282e9f69f30ee4",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8d8f52068e093a4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssh_http_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:520396380462:internet-gateway/igw-031a90cad339cd484",
            "id": "igw-031a90cad339cd484",
            "owner_id": "520396380462",
            "tags": {
              "Name": "terraform-test-igw"
            },
            "tags_all": {
              "Name": "terraform-test-igw"
            },
            "vpc_id": "vpc-08ddb869ef3ea4898"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:520396380462:route-table/rtb-0bd215329fb21a2bb",
            "id": "rtb-0bd215329fb21a2bb",
            "owner_id": "520396380462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031a90cad339cd484",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-test-public-rt"
            },
            "tags_all": {
              "Name": "terraform-test-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ddb869ef3ea4898"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0177cfcdd28814d76",
            "route_table_id": "rtb-0bd215329fb21a2bb",
            "subnet_id": "subnet-031282e9f69f30ee4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0928dbd8347190ce3",
            "route_table_id": "rtb-0bd215329fb21a2bb",
            "subnet_id": "subnet-08368b9b30c88d43a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:520396380462:security-group/sg-0d8d8f52068e093a4",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8d8f52068e093a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-http-sg",
            "name_prefix": "",
            "owner_id": "520396380462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-http-sg"
            },
            "tags_all": {
              "Name": "ssh-http-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ddb869ef3ea4898"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:520396380462:subnet/subnet-031282e9f69f30ee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-5a",
            "availability_zone_id": "apse5-az1",
            "cidr_block": "10.131.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031282e9f69f30ee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "520396380462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-test-public-subnet-1"
            },
            "tags_all": {
              "Name": "terraform-test-public-subnet-1"
            },
            "vpc_id": "vpc-08ddb869ef3ea4898"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:520396380462:subnet/subnet-08368b9b30c88d43a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-5b",
            "availability_zone_id": "apse5-az2",
            "cidr_block": "10.131.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08368b9b30c88d43a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "520396380462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-test-public-subnet-2"
            },
            "tags_all": {
              "Name": "terraform-test-public-subnet-2"
            },
            "vpc_id": "vpc-08ddb869ef3ea4898"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:520396380462:vpc/vpc-08ddb869ef3ea4898",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.131.0.0/16",
            "default_network_acl_id": "acl-0edaf3a548e2c112e",
            "default_route_table_id": "rtb-052a63a02343c49c8",
            "default_security_group_id": "sg-063f75e3232ceb942",
            "dhcp_options_id": "dopt-0c8ded5a75e13f055",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ddb869ef3ea4898",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052a63a02343c49c8",
            "owner_id": "520396380462",
            "tags": {
              "Name": "terraform-test-vpc"
            },
            "tags_all": {
              "Name": "terraform-test-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}